# torchft

./: .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml  train_ddp.py  train_ddp_proactive.py  train_fsdp.py
.github/workflows/: examples.yaml  lint.yaml
csrc/: CMakeLists.txt  ProcessGroupNCCL.cpp  ProcessGroupNCCL.hpp  init.cpp
docs/source/: index.rst
examples/: README.md  test_examples.py
examples/ddp_proactive/: .torchxconfig  README.md  train_ddp_proactive.py
examples/diloco/: .torchxconfig  README.md  train_diloco.py
examples/live_checkpoint_recovery/: .torchxconfig  README.md  train_ddp_lcr.py
examples/localsgd/: .torchxconfig  README.md  train_localsgd.py
examples/monarch/: train_distributed.py
examples/monarch/utils/: failure.py
examples/utils/: utils.py
proto/: torchft.proto
src/: interceptor.rs  interceptor.rs~  lib.rs  lighthouse.rs  manager.rs  net.rs  router.rs
streaming_diloco_prototype/: .torchxconfig  README.md  train.py
templates/: config.html  index.html
torchft/: _torchft.pyi  checkpointing.py  checkpointing_test.py  coordination.py  data.py  data_test.py  futures.py  lighthouse_test.py  local_sgd.py  local_sgd_integ_test.py  local_sgd_test.py  manager.py  manager_integ_test.py  manager_test.py  multi_quorum_test.py  process_group.py  process_group_test.py  serialization.py  serialization_test.py  torchx.py  utils.py
